<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cVBorder"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="25dp"
        card_view:contentPadding="3dp"
        >
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cVCenter"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@color/color3"
        card_view:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:visibility="gone"/>


            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:use_controller="true"
                app:resize_mode="fill"
                android:visibility="gone">

            </com.google.android.exoplayer2.ui.PlayerView>

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/music"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:use_controller="true"
                app:resize_mode="fill"
                android:visibility="gone"
                app:default_artwork="@drawable/note"
                >

            </com.google.android.exoplayer2.ui.PlayerView>

            <TextView
                android:id="@+id/tVTitle"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/tVContent"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:maxLines="3"
                android:ellipsize="end"/>

            <LinearLayout
                android:id="@+id/lLShowHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/tVShowHide"
                    android:textSize="15dp"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/show"/>


            <ImageView
                android:id="@+id/iVShowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:layout_gravity="center_vertical"
                card_view:tint="#ffffff" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>
<LinearLayout
    android:id="@+id/lastButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:visibility="gone"
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal">
    <ImageButton
        android:id="@+id/previousTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        android:background="@drawable/circle_button_background"
        android:tint="#ffffff"
        android:layout_gravity="right"
        android:visibility="invisible"
        android:padding="10dp"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToTest"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor"
        android:background="@drawable/test_button_background"
        android:visibility="invisible"
        />

    <ImageButton
        android:id="@+id/nextTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_right"
        android:background="@drawable/circle_button_background"
        android:tint="#ffffff"
        android:layout_gravity="right"
        android:visibility="invisible"
        android:padding="10dp"
        android:layout_margin="10dp"
        />
</LinearLayout>
</LinearLayout>