<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/item_on_list_background">

    <TextView
        android:id="@+id/tVTopicNumber"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="80dp"/>

    <TextView
        android:id="@+id/tVTopic"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"/>

</LinearLayout>